@@ -1,5 +1,11 @@
 2010-05-06  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	Remove NEED_BSDTTY and NEED_UNISTD_H.
+	* s/hpux10-20.h (NEED_BSDTTY): Remove.
+	* s/aix4-2.h (NEED_UNISTD_H): Remove.
+	* systty.h: Simplify conditionals for including <sys/bsdtty.h>,
+	<sys/ptyio.h> and <unistd.h>.
+
 	* emacs.c (main): Remove NO_DIR_LIBRARY conditional, unused.
 
 	* Makefile.in (STARTFILES): Conditionally define to make the usage clear.
